airs\refac(doc): #3177.9 native eng improvement
- New changes suggested by Santaulatia were applied.


Former-commit-id: 0cf2a5eaf0d5ac569a35c870ba28db65ec2b8af9

--- a/airs/content/pages/careers/character-test/index.adoc
+++ b/airs/content/pages/careers/character-test/index.adoc
@@ -33,8 +33,7 @@ with a maximum of 20 seconds per question,
 we will be able to see your 4 main strengths.
 Here are some suggestions for the test:
 . Once you start the test
-it can not be paused
-nor repeated,
+it cannot be paused nor repeated,
 . Make sure no interruptions occur during the test,
 . Trust your instinct,
 . There are no wrong answers,
