--- a/airs/content/pages/products/rules/list/credentials/142/index.adoc
+++ b/airs/content/pages/products/rules/list/credentials/142/index.adoc
@@ -51,7 +51,7 @@ to detect improper configurations or missing patches.
 . Asset: Access credentials
 . Scope: Confidentiality
 . Phase: Deployment
-. Type of Control: Recommendation
+. Type of control: Recommendation
 
 == Findings
 
