--- a/airs/content/pages/products/rules/list/files/039/index.adoc
+++ b/airs/content/pages/products/rules/list/files/039/index.adoc
@@ -42,11 +42,11 @@ because of the lack of space in the system.
 
 == Attributes
 
-* Layer: Application layer.
-* Asset: Files.
-* Scope: Availability.
-* Phase: Operation.
-* Type of Control: Recommendation.
+* Layer: Application layer
+* Asset: Files
+* Scope: Availability
+* Phase: Operation
+* Type of control: Recommendation
 
 == Findings
 
