--- a/airs/content/pages/products/rules/list/out-of-scope/assets/004/index.adoc
+++ b/airs/content/pages/products/rules/list/out-of-scope/assets/004/index.adoc
@@ -77,15 +77,11 @@ the incident is not managed.
 
 == Attributes
 
-* Layer: Resource Layer.
-
-* Asset: Information Assets.
-
-* Scope: Adherence.
-
-* Phase: Analysis.
-
-* Type of Control: Procedure.
+* Layer: Resource layer
+* Asset: Information assets
+* Scope: Adherence
+* Phase: Analysis
+* Type of control: Procedure
 
 == References
 
