--- a/airs/content/pages/products/rules/list/out-of-scope/assets/005/index.adoc
+++ b/airs/content/pages/products/rules/list/out-of-scope/assets/005/index.adoc
@@ -97,15 +97,11 @@ in a cost efficient manner.
 
 == Attributes
 
-* Layer: Resource Layer.
-
-* Asset: Information Assets.
-
-* Scope: Adherence.
-
-* Phase: Analysis.
-
-* Type of Control: Procedure.
+* Layer: Resource layer
+* Asset: Information assets
+* Scope: Adherence
+* Phase: Analysis
+* Type of control: Procedure
 
 == References
 
