--- a/airs/content/pages/products/rules/list/out-of-scope/assets/006/index.adoc
+++ b/airs/content/pages/products/rules/list/out-of-scope/assets/006/index.adoc
@@ -81,11 +81,11 @@ was not previously identified.
 
 == Attributes
 
-* Layer: Resource Layer.
-* Asset: Information Assets.
-* Scope: Adherence.
-* Phase: Analysis.
-* Type of Control: Procedure.
+* Layer: Resource layer
+* Asset: Information assets
+* Scope: Adherence
+* Phase: Analysis
+* Type of control: Procedure
 
 == References
 
