--- a/airs/content/pages/products/rules/list/networks/257/index.adoc
+++ b/airs/content/pages/products/rules/list/networks/257/index.adoc
@@ -18,17 +18,23 @@ must be assigned based on organizational user credentials
 Utilize port level access control, following 802.1x standards, to control which
 devices can authenticate to the network.
 
-. [[r2]] link:https://www.law.cornell.edu/cfr/text/45/164.312[HIPAA Security Rules 164.312(e)(1):]
+. [[r2]] link:https://www.cisecurity.org/controls/[CIS Controls. 15.8 Use Wireless Authentication Protocols That Require Mutual,
+Multi-Factor Authentication].
+Ensure that wireless networks use authentication protocols such as Extensible
+Authentication Protocol-Transport Layer Security (**EAP/TLS**),
+that requires mutual, multi-factor authentication.
+
+. [[r3]] link:https://www.law.cornell.edu/cfr/text/45/164.312[HIPAA Security Rules 164.312(e)(1):]
 Transmission Security: Implement technical security measures
 to guard against unauthorized access
 to electronic protected health information
 that is being transmitted over an electronic communications network.
 
-. [[r3]] link:https://www.iso.org/obp/ui/#iso:std:54534:en[ISO 27001:2013. Annex A - 9.1.2]
+. [[r4]] link:https://www.iso.org/obp/ui/#iso:std:54534:en[ISO 27001:2013. Annex A - 9.1.2]
 Users should only have access to the internal network and network
 services for which they have been explicitly authorized.
 
-. [[r4]] link:https://nvd.nist.gov/800-53/Rev4/control/IA-2[NIST 800-53 IA-2]
+. [[r5]] link:https://nvd.nist.gov/800-53/Rev4/control/IA-2[NIST 800-53 IA-2]
 Identification and authentication:
 The information system uniquely identifies and authenticates
 organizational users (or processes acting on behalf of organizational users).
