--- a/airs/content/pages/products/rules/list/privacy/310/index.adoc
+++ b/airs/content/pages/products/rules/list/privacy/310/index.adoc
@@ -20,10 +20,11 @@ Systems usually request information from their users or collect it based
 on their interactions with the application.
 Regulations demand that none of these collections occur without the user's
 consent, that this consent be demonstrable afterwards and that it only be
-requested after having informed the user of the types and purposes of data
-collection.
-Therefore, consent must always be requested in a clear manner and using an easy
-to understand language before collecting any personal information.
+requested after having informed the user
+of the types and purposes of data collection.
+Therefore, consent must always be requested in a clear manner
+and using easily understandable language
+before collecting any personal information.
 
 == Findings
 
