--- a/airs/content/pages/products/rules/list/privacy/315/index.adoc
+++ b/airs/content/pages/products/rules/list/privacy/315/index.adoc
@@ -14,39 +14,39 @@ requesting their consent for its collection or processing.
 
 == Description
 
-Systems usually request information from the users,
-obtain it from third parties or collect it based on their interactions with the
-application.
+Systems usually request information from their users,
+obtain it from third parties
+or collect it based on their interactions with the application.
 They should have a mechanism that allows users to find out about the following
-regarding the personal information that they process:
+aspects of the personal information that they process:
 
 . The purpose of the processing of the data.
 . The categories of processed data.
 . The actors who will have access to the information.
 . If possible, the time for which the data will be managed/processed.
-. The existence of the possibility to request erasure or rectification.
+. The possibility to request erasure or rectification.
 . If the data was obtained from a third party, information about the third
 party.
 
 Furthermore, the data should be presented in a clear manner,
-in a structured format and using an easy-to-understand language.
+in a structured format and using easily understandable language.
 
 == Exceptions
 
 . If the system is able to demonstrate that it is not possible to individually
-identify the users based on the information collected from them,
+identify users based on the information collected from them,
 this requirement is not applicable.
 
-. The processing of the personal information might have scientific or
-historical research purposes or statistical purposes.
+. The processing of the personal information might have scientific,
+historical research or statistical purposes.
 If the system properly safeguards this information and if complying with this
-requirement seriously impairs those purposes,
+requirement seriously impairs these purposes,
 this requirement is not applicable.
 
-. The processing of the personal information might have archiving purposes
+. The processing of personal information might have archiving purposes
 in the public interest.
 If the system properly safeguards this information and if complying with this
-requirement seriously impairs those purposes,
+requirement seriously impairs these purposes,
 this requirement is not applicable.
 
 == Findings
